初步完成gdb init调试